[tool.poetry]
name = "ahasura"
version = "1.4.1"
description = "Async and sync Hasura client"
readme = "README.md"
keywords = ["async", "sync", "ahasura", "hasura", "client"]
repository = "https://github.com/cmr-surgical/ahasura"
authors = ["Denis Ryzhkov <denis.ryzhkov@cmrsurgical.com>"]
license = "MIT"

[tool.poetry.urls]
Hasura = "https://hasura.io/"
"Hasura docs" = "https://hasura.io/docs/latest/graphql/core/index.html"

[tool.poetry.dependencies]
httpx = "^0"
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22"
flake8 = "^4"
isort = "^5"
mypy = "^0"
poethepoet = "^0"
pytest = ">=6 <8"
pytest-mock = "^3"

[tool.poe.tasks]
test = "pytest -xv"
lt.sequence = ["lint", "test"]

[tool.poe.tasks.ci]
env.CHECK = "--check"
sequence = ["lint", "test"]

[tool.poe.tasks.lint]
env.PY_FILES = "ahasura.py tests"
env.LINE_LENGTH = "88"
default_item_type = "cmd"
sequence = [
    "black $CHECK --line-length $LINE_LENGTH $PY_FILES",
    "isort $CHECK --line-length $LINE_LENGTH $PY_FILES",
    "flake8 --max-line-length $LINE_LENGTH $PY_FILES",
    "mypy --pretty $PY_FILES",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
